fix(test): suppress warnings and cleanup in test classes